# ati-netcanoem-cpp

./: .gitignore  CMakeLists.txt  FT_Matrix_Calculation.puml  NetCANOEM_FTSensor.cpp  NetCANOEM_FTSensor.hpp  README.md  main.cpp  utils.cpp  utils.hpp
ati-interface/: atiinterface.kv  main.py
